# class-18-03-22-BasDat-eapp

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 90ba271921e4_.py  f2f5805c8c58_.py
auth/: router.py
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 888a023070ce_.py
backend/app/app/: main.py
backend/app/app/auth/: router.py  schema.py
backend/app/app/core/: hashing.py  security.py
backend/app/app/database/: models.py  session.py
backend/app/app/products/: models.py  router.py
backend/app/app/user/: models.py  router.py  schema.py  services.py  validation.py
core/: config.py  hashing.py  security.py
database/: models.py  session.py
products/: models.py  router.py  schema.py  services.py
user/: models.py  router.py  schema.py  services.py
